[package]
name = "time-display"
description = "タイムアタック用計時画像生成ツール"
version = "0.1.1"
authors = ["Igaguri <igagurimk@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

homepage = "https://github.com/IgaguriMK/time-display"
repository = "https://github.com/IgaguriMK/time-display"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
image = "0.22"
tiny_fail = "0.2.0"